2025-11-30  Karl Berry  <karl@freefriends.org>

	* am/euptex.am (euptex_tests): depend on eup-basic.fmt
	here to avoid race condition when running the tests. Define rules
	to build it.

2025-08-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* euptexextra.h, am/euptex.am: Remove ptex and ptexdir/.
	Remove ptex and ptexdir/.
	https://github.com/texjporg/tex-jp-build/issues/32
	* euptex-prntknj.test: Update tests.

2025-08-10  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* suppresserrors.ch, am/euptex.am:
	Clean up unbalanced-braces*.ch .
	https://github.com/texjporg/tex-jp-build/pull/187

2025-06-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/printkanji.tex, tests/pknj-[esu].log:
	Update tests.

2025-05-06  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* pdfutils.ch: Rename bool variable to booltemp, for C23.
	https://github.com/texjporg/tex-jp-build/issues/178

2025-04-26  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* eupver.test, euptex-{ctrlsym,widow}.test,
	tests/control-symbol.tex, tests/ctrlsym.tex,
	tests/ctrlsym-{e,s}.log, tests/jctrlsym-{e,u}.log,
	tests/eup-jctrlsyma-{e,u}.typ,
	tests/eup-jchwidow{,-{e,s}}.log, am/euptex.am:
	Clean up tests to prepare to remove ptexdir.
	https://github.com/texjporg/tex-jp-build/issues/32
	* wcfname0.test: Add tests for recorder filename.
	https://github.com/texjporg/tex-jp-build/issues/45

2025-04-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* e{,u}ptrip/eptrip.tex, tests/eup-jchwidow.log,
	tests/printkanji.tex, tests/pknj-{e,s,u}.log:
	Update tests.

2025-03-07  Karl Berry  <karl@tug.org>

	* TL'25 release.

2025-02-17  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* eptex.ech: Adjust protected_token.
	Thanks to Kazuki Maeda and Yukimasa Morimi.
	https://github.com/texjporg/tex-jp-build/issues/176

2025-02-09  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* suppresserrors.ch: Format \ignoreprimitiveerror printing
	as in pdfTeX and XeTeX.
	* kinsoku_table.log, kinsoku_table.tex: No error after