@@ -1,3 +1,7 @@
+2025-12-02  Karl Berry  <karl@freefriends.org>
+
+	* am/uptex.am (up-basic.tex): $(srcdir) not $srcdir.
+
 2025-11-30  Karl Berry  <karl@freefriends.org>
 
 	* am/uptex.am (uptex_tests): depend on up-basic{,-{euc,sjis}}.fmt
