@@ -1,3 +1,7 @@
+2025-12-02  Karl Berry  <karl@freefriends.org>
+
+	* am/euptex.am (eup-basic.tex): $(srcdir) not $srcdir.
+
 2025-11-30  Karl Berry  <karl@freefriends.org>
 
 	* am/euptex.am (euptex_tests): depend on eup-basic.fmt
